build: break autotools configuration to warn about deprecation
We are planning on completely dropping Autotools in the future.
This breaks the build process with an argument to ignore the deprecation,
so that anyone building NM is warned of this change.

--- a/Makefile.am
+++ b/Makefile.am
@@ -159,6 +159,7 @@ DISTCHECK_CONFIGURE_FLAGS = \
 	--enable-ifcfg-rh \
 	--enable-ifupdown \
 	--disable-dependency-tracking \
+	--disable-autotools-deprecation \
 	$(NULL)
 
 dist-configure-check:
