--- a/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
+++ b/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
@@ -1626,6 +1626,10 @@
                   dbus-type="i"
                   gprop-type="gint"
                   />
+        <property name="dhcp-use-routes"
+                  dbus-type="i"
+                  gprop-type="gint"
+                  />
         <property name="dhcp-vendor-class-identifier"
                   dbus-type="s"
                   gprop-type="gchararray"
@@ -1766,6 +1770,10 @@
                   gprop-type="NMTernary"
                   />
         <property name="dhcp-timeout"
+                  dbus-type="i"
+                  gprop-type="gint"
+                  />
+        <property name="dhcp-use-routes"
                   dbus-type="i"
                   gprop-type="gint"
                   />
