--- a/.gitlab-ci/ci.template
+++ b/.gitlab-ci/ci.template
@@ -237,14 +237,16 @@ pages:
   needs:
     - "t_{{default_distro.name}}:{{default_distro.versions[0]}}: [meson+gcc+docs+valgrind]"
 
-# triage:issues:
-#   stage: triage
-#   image: ruby:2.7
-#   script:
-#     - gem install gitlab-triage
-#     - gitlab-triage -d --token $API_TOKEN --source-id $SOURCE_ID
-#   only:
-#     - schedules
+triage:issues:
+  stage: triage
+  image: ruby:3
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule" && $SCHEDULED_PIPELINE_NAME == "daily"
+  tags:
+    - placeholder-job  # The job mostly waits on network requests, so use only one CPU: https://gitlab.freedesktop.org/freedesktop/freedesktop/-/issues/1358#note_2457416
+  script:
+    - gem install gitlab-triage
+    - gitlab-triage --debug --token $API_TOKEN --source-id $CI_PROJECT_ID
 
 # Clean the generated images periodically to get updated snapshots of the distribution images.
 # Create an scheduled pipeline to run it, passing an AUTHFILE environment variable of type
@@ -254,7 +256,7 @@ clean-images:
     - .fdo.ci-fairy
   stage: prep
   rules:
-    - if: $CI_PIPELINE_SOURCE == "schedule"
+    - if: $CI_PIPELINE_SOURCE == "schedule" && $SCHEDULED_PIPELINE_NAME == "weekly"
   script:
     - ci-fairy -v --authfile $AUTHFILE delete-image --project NetworkManager/NetworkManager --all
 
@@ -263,7 +265,7 @@ clean-images:
 workflow:
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+    - if: $CI_PIPELINE_SOURCE == 'schedule'
     - if: $CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS
       when: never
     - if: $CI_COMMIT_BRANCH
-    - if: $CI_PIPELINE_SOURCE == 'schedule'
