--- a/.gitlab-ci/ci.template
+++ b/.gitlab-ci/ci.template
@@ -267,5 +267,7 @@ clean-images:
 workflow:
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
-    - if: $CI_PIPELINE_SOURCE == 'push'
+    - if: $CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS
+      when: never
+    - if: $CI_COMMIT_BRANCH
     - if: $CI_PIPELINE_SOURCE == 'schedule'
