--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,11 +59,11 @@ variables:
   #
   # This is done by running `ci-fairy generate-template` and possibly bumping
   # ".default_tag".
-  ALPINE_TAG:  'tag-ed94fd969369'
-  CENTOS_TAG:  'tag-dc93a9c129f8'
-  DEBIAN_TAG:  'tag-3766b6cf1e7d'
-  FEDORA_TAG:  'tag-dc93a9c129f8'
-  UBUNTU_TAG:  'tag-3766b6cf1e7d'
+  ALPINE_TAG:  'tag-75ecbb5bcef4'
+  CENTOS_TAG:  'tag-ea45f0a3f632'
+  DEBIAN_TAG:  'tag-1ccef04c657b'
+  FEDORA_TAG:  'tag-ea45f0a3f632'
+  UBUNTU_TAG:  'tag-1ccef04c657b'
 
   ALPINE_EXEC: 'bash .gitlab-ci/alpine-install.sh'
   CENTOS_EXEC: 'bash .gitlab-ci/fedora-install.sh'
@@ -680,5 +680,7 @@ clean-images:
 workflow:
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
-    - if: $CI_PIPELINE_SOURCE == 'push'
+    - if: $CI_COMMIT_BRANCH && $CI_OPEN_MERGE_REQUESTS
+      when: never
+    - if: $CI_COMMIT_BRANCH
     - if: $CI_PIPELINE_SOURCE == 'schedule'
