--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,11 +59,11 @@ variables:
   #
   # This is done by running `ci-fairy generate-template` and possibly bumping
   # ".default_tag".
-  ALPINE_TAG:  'tag-75ecbb5bcef4'
-  CENTOS_TAG:  'tag-0de3c2e2d9ed'
-  DEBIAN_TAG:  'tag-1ccef04c657b'
-  FEDORA_TAG:  'tag-0de3c2e2d9ed'
-  UBUNTU_TAG:  'tag-1ccef04c657b'
+  ALPINE_TAG:  'tag-63a17fe29587'
+  CENTOS_TAG:  'tag-f02bd5ca818e'
+  DEBIAN_TAG:  'tag-7818bbf1d226'
+  FEDORA_TAG:  'tag-f02bd5ca818e'
+  UBUNTU_TAG:  'tag-7818bbf1d226'
 
   ALPINE_EXEC: 'bash .gitlab-ci/alpine-install.sh'
   CENTOS_EXEC: 'bash .gitlab-ci/fedora-install.sh'
@@ -342,13 +342,9 @@ t_fedora:40:
   parallel:
     matrix:
       - NM_TEST_SELECT_RUN:
-        - autotools+gcc+docs+valgrind
         - meson+gcc+docs+valgrind
-        - autotools+clang
         - meson+clang
-        - rpm+autotools
         - rpm+meson
-        - tarball+autotools
         - tarball+meson
         - tarball
         - subtree
@@ -369,13 +365,9 @@ t_fedora:rawhide:
   parallel:
     matrix:
       - NM_TEST_SELECT_RUN:
-        - autotools+gcc+docs+valgrind
         - meson+gcc+docs+valgrind
-        - autotools+clang
         - meson+clang
-        - rpm+autotools
         - rpm+meson
-        - tarball+autotools
         - tarball+meson
         - tarball
         - subtree
@@ -396,13 +388,9 @@ t_centos:stream9:
   parallel:
     matrix:
       - NM_TEST_SELECT_RUN:
-        - autotools+gcc+docs+valgrind
         - meson+gcc+docs+valgrind
-        - autotools+clang
         - meson+clang
-        - rpm+autotools
         - rpm+meson
-        - tarball+autotools
         - tarball+meson
         - tarball
         - subtree
@@ -650,9 +638,9 @@ pages:
       when: never
     - if: $CI_MERGE_REQUEST_SOURCE_BRANCH_NAME == 'main'
   dependencies:
-    - "t_fedora:40: [autotools+gcc+docs+valgrind]"
+    - "t_fedora:40: [meson+gcc+docs+valgrind]"
   needs:
-    - "t_fedora:40: [autotools+gcc+docs+valgrind]"
+    - "t_fedora:40: [meson+gcc+docs+valgrind]"
 
 # triage:issues:
 #   stage: triage
