--- a/.gitlab-ci/config.yml
+++ b/.gitlab-ci/config.yml
@@ -18,52 +18,56 @@ base_types:
 
 # The list of all distributions we want to create job for.
 distributions:
+  # TIER 1: CI run for all MRs.
+  # The first tier:1 in the list is used to build the pages and check-{tree,patch}.
   - name: fedora
-    # The first tier:1 in the list is used to build the pages and check-{tree,patch}
     tier: 1
     versions:
-      - '39'
-  - name: fedora
-    tier: 2
-    versions:
-      - '37'
-      - '38'
       - '40'
-  - name: fedora
-    tier: 3
-    versions:
-      - '30'
-      - '31'
-      - '32'
-      - '33'
-      - '34'
-      - '35'
-      - '36'
-  - name: ubuntu
-    tier: 2
-    versions:
-      - '18.04'
-      - '20.04'
-      - '22.04'
-      - 'devel'
-      - 'rolling'
-  - name: debian
-    tier: 2
-    versions:
-      - '10'
-      - '11'
-      - 'sid'
-  - name: debian
-    tier: 3
-    versions:
-      - '9'
-      - 'testing'
+
+  # TIER 2: distribution versions that will or might use the current NM version.
+  # Run when doing a release.
   - name: centos
     tier: 2
     versions:
-      - 'stream8'
       - 'stream9'
+  - name: ubuntu
+    tier: 2
+    versions:
+      - '24.04'
   - name: alpine
     tier: 2
     versions:
-      - 'latest'
+      - 'latest'  # only 'latest' is supported by ci-templates: https://gitlab.freedesktop.org/freedesktop/ci-templates/-/issues/71
+  
+  # TIER 3: distribution versions not in EOL but don't use the current NM version.
+  # Run when doing a release, but a failure won't be blocking for the release.
+  - name: fedora
+    tier: 3
+    versions:
+      - '39'
+      - 'rawhide'
+  - name: centos
+    tier: 3
+    versions:
+      - 'stream8'
+  - name: ubuntu
+    tier: 3
+    versions:
+      - '20.04'
+      - '22.04'
+      - 'rolling' # latest non-LTS
+      - 'devel'
+  - name: debian
+    tier: 3
+    versions:
+      - '11'
+      - '12'
+      - 'sid'
+      - 'testing'
+  
+  # only 'latest' supported by ci-templates
+  # - name: alpine
+  #   tier: 3
+  #   versions:
+  #     - 'edge'
